<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F6F8"
    android:overScrollMode="never"
    tools:context=".ui.main.bottomnav.ui.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="15dp">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/myProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/my_profile"
                android:textColor="#171717"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textSize="17sp"
                app:icon="@drawable/logout"
                app:layout_constraintBottom_toBottomOf="@+id/myProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/myProfile" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/upload_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myProfile" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/semibold"
                android:text="Tillie Jackson"
                android:textColor="#171717"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                app:layout_constraintStart_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toBottomOf="@+id/profileImage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/medium"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:textColor="#6D7278"
                android:paddingEnd="10dp"
                android:text="Marketing Team"
                app:layout_constraintEnd_toEndOf="@+id/profileName"
                app:layout_constraintStart_toStartOf="@+id/profileName"
                app:layout_constraintTop_toBottomOf="@+id/profileName" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="#E7E7E7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/team" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="vunvez@dovihsi.co.uk"
                android:textSize="14sp"
                android:textColor="#6D7278"
                android:drawableTint="#6D7278"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:fontFamily="@font/regular"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="(269) 736-3689"
                android:textSize="14sp"
                android:textColor="#6D7278"
                android:drawableTint="#6D7278"
                android:drawableStart="@drawable/call"
                android:drawablePadding="10dp"
                android:fontFamily="@font/regular"
                app:layout_constraintStart_toStartOf="@+id/mailAddress"
                app:layout_constraintTop_toBottomOf="@+id/mailAddress" />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:padding="15dp">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/basicInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Basic Information"
                android:textSize="16sp"
                android:fontFamily="@font/bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#E7E7E7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/basicInfo" />


            <LinearLayout
                android:id="@+id/dobLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_of_birth"
                    android:textSize="14sp"
                    android:fontFamily="@font/regular"
                    android:textColor="#6D7278"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="17 Nov, 1987"
                    android:textSize="14sp"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bgLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dobLayout"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blood_group"
                    android:textSize="14sp"
                    android:fontFamily="@font/regular"
                    android:textColor="#6D7278"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="AB+ve"
                    android:textSize="14sp"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/addressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bgLayout"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textSize="14sp"
                    android:fontFamily="@font/regular"
                    android:textColor="#6D7278"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="785 Duwud River,\nKacohwe, Minnesota,\nBurundi- 21087 "
                    android:textSize="14sp"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/black"/>

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>